fix(report): encode stored instructions and batch their lookup in CDM reports
Addresses two findings from the Copilot review on #3900, plus defects in
the CDM report screens found while writing their browser check.

Stored XSS (high). The CDM reports now list every measuring instruction
stored on readings. Those come from the entry form's inputMInstrc-*
field, so they are user-entered. InitializePatientsMetGuidelineCDMReport
rendered them raw into value="...". The audit of pages that render
measuringInstrc encoded it for its context in these places:
- the three CDM screens (checkbox value and label);
- SelectCDMReport (group names; it gains the carlos taglib);
- the met-guideline hidden type and date fields;
- DisplayHistory (instruction, type title, provider names), which
  printed the stored instruction raw;
- the ClinicalReports measurement selects (SafeEncode in scriptlets).
The result page already encoded each message. CdmReportJspEncodingRegressionTest
pins all of these.

N+1 (medium). The instructions stored on readings are now read for all
of a group's types in one query:
- MeasurementDao.findDistinctMeasuringInstructionsByTypes(Collection)
  returns a map by type and replaces the per-type method added earlier
  in this PR.
- RptMeasurementTypesBeanHandler collects the type codes, queries once
  and hands each RptMeasuringInstructionBeanHandler its rows. The
  current instructions still come first.
- A unit test verifies one DAO call for three types; the DAO integration
  test covers the batched query.

The CDM screens could not work at all. Fixed:
- All three read each row's instructions from a bean or attribute that
  does not exist: RptMeasurementTypesBean has no measuringInstrcVector,
  and the session holds mInstrcsN, not mInstrcs. The met-guideline page
  also posted an empty instruction count. They now read the Nth handler
  of measurementTypes, which RptMeasurementTypesBeanHandler builds one
  per row.
- Non-numeric validation rules have NULL isNumer