@@ -23,76 +23,113 @@
 package io.github.carlos_emr.carlos.report.oscarMeasurements.pageUtil;
 
 import io.github.carlos_emr.carlos.commn.dao.MeasurementDao;
+import io.github.carlos_emr.carlos.commn.dao.MeasurementGroupDao;
 import io.github.carlos_emr.carlos.commn.dao.MeasurementTypeDao;
+import io.github.carlos_emr.carlos.commn.model.MeasurementGroup;
 import io.github.carlos_emr.carlos.commn.model.MeasurementType;
+import io.github.carlos_emr.carlos.test.unit.CarlosUnitTestBase;
 
+import org.junit.jupiter.api.BeforeEach;
+import org.mockito.ArgumentCaptor;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 
+import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.List;
+import java.util.Map;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
-import static org.mockito.ArgumentMatchers.anyString;
 
 /**
  * Pins that the CDM reports keep offering a measurement type's legacy measuring instructions,
- * so readings saved before an instruction change (AACP Yes/No, issue #3893) stay reportable.
+ * so readings saved before an instruction change (AACP Yes/No, issue #3893) stay reportable, and
+ * that the stored instructions are read in one query per report rather than one per type.
  *
  * @since 2026-09-24
  */
 @Tag("unit")
 @Tag("fast")
 @Tag("measurement")
-class RptMeasuringInstructionBeanHandlerUnitTest {
+class RptMeasuringInstructionBeanHandlerUnitTest extends CarlosUnitTestBase {
 
+    private final MeasurementGroupDao measurementGroupDao = mock(MeasurementGroupDao.class);
     private final MeasurementTypeDao measurementTypeDao = mock(MeasurementTypeDao.class);
     private final MeasurementDao measurementDao = mock(MeasurementDao.class);
+
+    @BeforeEach
+    void registerDaos() {
+        registerMock(MeasurementGroupDao.class, measurementGroupDao);
+        registerMock(MeasurementTypeDao.class, measurementTypeDao);
+        registerMock(MeasurementDao.class, measurementDao);
+    }
 
     @Test
     @DisplayName("should list the current AACP instruction first and the legacy Yes/No instruction after it")
     void shouldIncludeLegacyInstruction_forAacpReadingsSavedAsYesNo() {
-        when(measurementTypeDao.findByTypeDisplayName("Asthma Action Plan "))
-                .thenReturn(List.of(type("AACP", "Provided/Revised/Reviewed")));
-        when(measurementDao.findDistinctMeasuringInstructionsByType("AACP"))
-                .thenReturn(Arrays.asList("Yes/No", "Provided/Revised/Reviewed", "", null, "  "));
+        RptMeasuringInstructionBeanHandler handler = new RptMeasuringInstructionBeanHandler(
+                List.of(type("AACP", "Asthma Action Plan ", "Provided/Revised/Reviewed")),
+                Map.of("AACP", Arrays.asList("Yes/No", "Provided/Revised/Reviewed", "", null, "  ")));
 
-        List<String> instructions = instructions(new RptMeasuringInstructionBeanHandler(
-                "Asthma Action Plan ", measurementTypeDao, measurementDao));
-
-        assertThat(instructions).containsExactly("Provided/Revised/Reviewed", "Yes/No");
+        assertThat(instructions(handler)).containsExactly("Provided/Revised/Reviewed", "Yes/No");
     }
 
     @Test
     @DisplayName("should list only the current instruction when no reading uses another one")
     void shouldListCurrentInstructionOnly_whenNoLegacyReadingsExist() {
-        when(measurementTypeDao.findByTypeDisplayName("Blood Pressure"))
-                .thenReturn(List.of(type("BP", "sitting position")));
-        when(measurementDao.findDistinctMeasuringInstructionsByType("BP")).thenReturn(List.of());
+        RptMeasuringInstructionBeanHandler handler = new RptMeasuringInstructionBeanHandler(
+                List.of(type("BP", "Blood Pressure", "sitting position")), Map.of());
 
-        assertThat(instructions(new RptMeasuringInstructionBeanHandler(
-                "Blood Pressure", measurementTypeDao, measurementDao))).containsExactly("sitting position");
+        assertThat(instructions(handler)).containsExactly("sitting position");
     }
 
     @Test
-    @DisplayName("should list nothing and query no readings for an unknown display name")
-    void shouldListNothing_forUnknownDisplayName() {
-        when(measurementTypeDao.findByTypeDisplayName("Unknown")).thenReturn(List.of());
+    @DisplayName("should read the stored instructions of every listed type in a single query")
+    void shouldQueryStoredInstructionsOnce_forManyTypes() {
+        List<MeasurementGroup> groups = new ArrayList<>();
+        String[][] rows = {{"AACP", "Asthma Action Plan ", "Provided/Revised/Reviewed"},
+                {"BP", "Blood Pressure", "sitting position"}, {"WT", "Weight", "in kg"}};
+        for (String[] row : rows) {
+            MeasurementGroup group = new MeasurementGroup();
+            group.setName("FAKE-CDM");
+            group.setTypeDisplayName(row[1]);
+            groups.add(group);
+            List<MeasurementType> types = List.of(type(row[0], row[1], row[2]));
+            when(measurementTypeDao.findByTypeDisplayName(row[1])).thenReturn(types);
+        }
+        when(measurementGroupDao.findByName("FAKE-CDM")).thenReturn(groups);
+        when(measurementDao.findDistinctMeasuringInstructionsByTypes(any()))
+                .thenReturn(Map.of("AACP", List.of("Yes/No")));
 
-        assertThat(instructions(new RptMeasuringInstructionBeanHandler(
-                "Unknown", measurementTypeDao, measurementDao))).isEmpty();
-        verify(measurementDao, never()).findDistinctMeasuringInstructionsByType(anyString());
+        RptMeasurementTypesBeanHandler report = new RptMeasurementTypesBeanHandler("FAKE-CDM");
+
+        verify(measurementDao, times(1)).findDistinctMeasuringInstructionsByTypes(any());
+        @SuppressWarnings("unchecked")
+        ArgumentCaptor<Collection<String>> queried = ArgumentCaptor.forClass(Collection.class);
+        verify(measurementDao).findDistinctMeasuringInstructionsByTypes(queried.capture());
+        assertThat(queried.getValue()).containsExactlyInAnyOrder("AACP", "BP", "WT");
+        assertThat(report.getMeasurementTypeVector()).hasSize(3);
+        assertThat(report.getMeasuringInstrcBeanVector()).hasSize(3);
+        assertThat(instructions(report.getMeasuringInstrcBeanVector().get(0)))
+                .containsExactly("Provided/Revised/Reviewed", "Yes/No");
+        assertThat(instructions(report.getMeasuringInstrcBeanVector().get(1))).containsExactly("sitting position");
     }
 
-    private static MeasurementType type(String code, String instruction) {
-        MeasurementType mt = new MeasurementType();
-        mt.setType(code);
-        mt.setMeasuringInstruction(instruction);
+    /** A mock, because the entity has no id setter and the report bean unboxes the id. */
+    private static MeasurementType type(String code, String displayName, String instruction) {
+        MeasurementType mt = mock(MeasurementType.class);
+        when(mt.getId()).thenReturn(Math.abs(code.hashCode()));
+        when(mt.getType()).thenReturn(code);
+        when(mt.getTypeDisplayName()).thenReturn(displayName);
+        when(mt.getTypeDescription()).thenReturn(displayName);
+        when(mt.getMeasuringInstruction()).thenReturn(instruction);
         return mt;
     }
 
